# film-emulator

./: .gitignore  Cargo.toml  README.md  build.rs
src/: FilmEmulator.rs  GpuImageComputePipeline.rs  GpuImageRenderPipeline.rs  ImageControls.rs  ImagePaintCallback.rs  ImageRenderResources.rs  ImageTextureView.rs  ViewportUniform.rs  image_loader.rs  main.rs  pipeline.rs  window.rs
src/shaders/: compute.wgsl  shader.wgsl
